<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_facebook_ads_learn_more">Learn More</string>
    <string name="com_facebook_skip_ad">Skip Ad</string>
    <string name="com_facebook_skip_ad_in">Skip Ad in</string>
    <string name="accept">Accept</string>
    <string name="accessibility_service_description">The Service for thr purpose of Android 4.0.3 and above to lock apps easily.</string>
    <string name="activity_name_pattern">Start.*cmp=([\\w\\._]*)/([\\w\\._]*)</string>
    <string name="alp_42447968_cmd_Attention">Attention</string>
    <string name="alp_42447968_cmd_android_m_above">This device version is above Android 4.0.3 .Please Go Setting->AccessibilityService->App Locker and Open it.</string>
    <string name="alp_42447968_cmd_android_m_above_toast">Find Setting->AccessibilityService->App Locker and Open it.</string>
    <string name="alp_42447968_cmd_cancle">Cancle</string>
    <string name="alp_42447968_cmd_confirm">Confirm</string>
    <string name="alp_42447968_cmd_continue">Continue</string>
    <string name="alp_42447968_cmd_forgot_pattern">Forgot pattern?</string>
    <string name="alp_42447968_cmd_install_cancle_button">CANCLE</string>
    <string name="alp_42447968_cmd_install_lock_button">LOCK</string>
    <string name="alp_42447968_cmd_install_lock_content">We detected %s has installed,will you lock it</string>
    <string name="alp_42447968_cmd_retry">Retry</string>
    <string name="alp_42447968_loading">Loading…</string>
    <string name="alp_42447968_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_42447968_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_42447968_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_42447968_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_42447968_msg_connect_4dots">"Connect at least 4 dots.
Try again…"</string>
    <string name="alp_42447968_msg_draw_an_unlock_pattern">Draw an unlock pattern</string>
    <string name="alp_42447968_msg_draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="alp_42447968_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_42447968_msg_redraw_pattern_to_confirm">Redraw pattern to confirm</string>
    <string name="alp_42447968_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_42447968_msg_try_again">Sorry, try again</string>
    <string name="alp_42447968_msg_your_new_unlock_pattern">Your new unlock pattern</string>
    <string name="alp_42447968_pkey_display_captcha_wired_dots">alp.pkey.display.captcha_wired_dots</string>
    <string name="alp_42447968_pkey_display_max_retries">alp.pkey.display.max_retries</string>
    <string name="alp_42447968_pkey_display_min_wired_dots">alp.pkey.display.min_wired_dots</string>
    <string name="alp_42447968_pkey_display_stealth_mode">alp.pkey.display.stealth_mode</string>
    <string name="alp_42447968_pkey_sys_auto_save_pattern">alp.pkey.sys.auto_save_pattern</string>
    <string name="alp_42447968_pkey_sys_encrypter_class">alp.pkey.sys.encrypter_class</string>
    <string name="alp_42447968_pkey_sys_pattern">alp.pkey.sys.pattern</string>
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_forgot_pattern">Forgot pattern?</string>
    <string name="alp_cmd_retry">Retry</string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_msg_connect_4dots">"Connect at least 4 dots.
Try againâ€¦"</string>
    <string name="alp_msg_draw_an_unlock_pattern">Draw an unlock pattern</string>
    <string name="alp_msg_draw_pattern_to_unlock">Draw pattern to unlock</string>
    <string name="alp_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_msg_redraw_pattern_to_confirm">Redraw pattern to confirm</string>
    <string name="alp_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_msg_try_again">Sorry, try again</string>
    <string name="alp_msg_your_new_unlock_pattern">Your new unlock pattern</string>
    <string name="appLockerPreferenceActivityName">Appz Lock Preference</string>
    <string name="app_name">App Locker</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="banner_ad_unit_id">ca-app-pub-2557669164207429/8417802190</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="dialog_title">Rate %s</string>
    <string name="email_hint">Enter email address</string>
    <string name="email_later">Later</string>
    <string name="email_next">Next</string>
    <string name="email_title">Password Retrieve Setting</string>
    <string name="email_warn">*When you fail to unlock for 3 times continuously,you can reset the password by the above email address.</string>
    <string name="facebook_app_id">1748050855445951</string>
    <string name="later">Later</string>
    <string name="lockscreen_forgot">Forgot password?</string>
    <string name="lockscreen_unlock">Enter password to unlock</string>
    <string name="logcat_clear_command">logcat -c</string>
    <string name="logcat_command">logcat ActivityManager:I *:S</string>
    <string name="no_thanks">No thanks</string>
    <string name="rate">Rate Now</string>
    <string name="rate_message">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="retrive_hint">Enter Retrieve Code</string>
    <string name="retrive_ok">OK</string>
    <string name="retrive_resend">Resend</string>
    <string name="retrive_send">Send</string>
    <string name="retrive_title">Retrieve Password</string>
    <string name="service_running">Service is Running</string>
    <string name="setting_item_change_password">Change Password</string>
    <string name="setting_item_service_current_relocktime">current 2 minutes</string>
    <string name="setting_item_service_enable">Applocker Server</string>
    <string name="setting_item_service_lock_type">Lock Type</string>
    <string name="setting_item_service_password_retrive">Password Retrieve</string>
    <string name="setting_item_service_rateus">Rate App</string>
    <string name="setting_item_service_relock_time">Set Relock Time</string>
    <string name="setting_item_service_upgrade">Version Check</string>
    <string name="shortcut_nshare_get">Get Nshare</string>
    <string name="soft_update_info">New version available,Update now</string>
    <string name="soft_update_no">Already the latest version</string>
    <string name="soft_update_title">Update</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="str_download_apk_fail">download fail</string>
    <string name="str_download_apk_fail_neterror">network error results in failure</string>
    <string name="str_download_apk_success">download finish,click to install</string>
    <string name="str_download_state_ing">Downloading</string>
    <string name="str_start_download">start download</string>
    <string name="upgrade_button_cancle">Cancle</string>
    <string name="upgrade_button_ok">Ok</string>
    <string name="upgrade_download_space_error">SD card space is not enough！</string>
</resources>
