<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:background="@drawable/dilog_bg" android:layout_width="337.0dip" android:layout_height="172.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/install_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <TextView android:textSize="20.0sp" android:textColor="#ff202020" android:id="@id/install_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/alp_42447968_cmd_Attention" />
            <TextView android:textSize="14.0sp" android:textColor="#ff737373" android:id="@id/install_content" android:paddingTop="15.0dip" android:paddingBottom="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="20.0dip" android:text="@string/alp_42447968_cmd_install_lock_content" />
            <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginBottom="3.0dip" android:layout_below="@id/install_header">
            <Button android:textSize="16.0sp" android:textColor="#ff737373" android:id="@id/cancle" android:background="@drawable/btn_dialog_selector" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:text="@string/alp_42447968_cmd_install_cancle_button" />
            <View android:background="#ffe5e5e5" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <Button android:textSize="16.0sp" android:textColor="#ff1cb467" android:id="@id/lock" android:background="@drawable/btn_dialog_selector" android:layout_width="160.0dip" android:layout_height="fill_parent" android:layout_marginRight="8.0dip" android:text="@string/alp_42447968_cmd_install_lock_button" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>