<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation = "vertical"
              android:background = "#fffbfaf8"
              android:layout_width = "fill_parent"
              android:layout_height = "fill_parent"
              android:animateLayoutChanges = "true"
              xmlns:android = "http://schemas.android.com/apk/res/android"
              xmlns:binding = "http://www.gueei.com/android-binding/" >

    <RelativeLayout
            android:background = "#ff81cfab"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content" >

        <ImageButton
                android:id = "@id/back"
                android:background = "@android:color/transparent"
                android:layout_width = "56.0dip"
                android:layout_height = "56.0dip"
                android:src = "@drawable/arrows_back"
                android:layout_alignParentLeft = "true" />

        <TextView
                android:textSize = "20.0sp"
                android:textColor = "@color/white"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginRight = "14.0dip"
                android:layout_marginBottom = "10.0dip"
                android:text = "@string/retrive_title"
                android:layout_centerInParent = "true" />
    </RelativeLayout >

    <TextView
            android:textSize = "12.0sp"
            android:gravity = "center"
            android:paddingLeft = "10.0dip"
            android:paddingRight = "10.0dip"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginLeft = "20.0dip"
            android:layout_marginTop = "10.0dip"
            android:layout_marginRight = "20.0dip"
            android:text = "Your password retrieve Email:" />

    <TextView
            android:textSize = "18.0sp"
            android:gravity = "center_vertical"
            android:id = "@id/retrive_email"
            android:background = "@drawable/search_bg"
            android:paddingLeft = "10.0dip"
            android:paddingRight = "10.0dip"
            android:layout_width = "fill_parent"
            android:layout_height = "48.0dip"
            android:layout_marginLeft = "20.0dip"
            android:layout_marginTop = "10.0dip"
            android:layout_marginRight = "20.0dip"
            android:layout_marginBottom = "10.0dip"
            android:text = "xx@mail.com" />

    <EditText
            android:id = "@id/retrive_code"
            android:background = "@drawable/search_bg"
            android:paddingLeft = "10.0dip"
            android:paddingRight = "10.0dip"
            android:visibility = "gone"
            android:layout_width = "fill_parent"
            android:layout_height = "48.0dip"
            android:layout_marginLeft = "20.0dip"
            android:layout_marginRight = "20.0dip"
            android:layout_marginBottom = "10.0dip"
            android:hint = "@string/retrive_hint"
            android:ems = "20"
            android:inputType = "textEmailAddress" >

        <requestFocus />
    </EditText >

    <LinearLayout
            android:orientation = "vertical"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginLeft = "20.0dip"
            android:layout_marginRight = "20.0dip" >

        <Button
                android:textSize = "18.0sp"
                android:textColor = "@color/white"
                android:id = "@id/retrive_send"
                android:background = "@drawable/btn_red_bg"
                android:visibility = "visible"
                android:layout_width = "fill_parent"
                android:layout_height = "42.0dip"
                android:text = "@string/retrive_send"
                android:layout_weight = "1.0" />

        <Button
                android:textSize = "18.0sp"
                android:textColor = "@color/white"
                android:id = "@id/retrive_ok"
                android:background = "@drawable/btn_red_bg"
                android:visibility = "invisible"
                android:layout_width = "fill_parent"
                android:layout_height = "42.0dip"
                android:layout_marginLeft = "5.0dip"
                android:text = "@string/retrive_ok"
                android:layout_weight = "1.0" />

        <Button
                android:textSize = "18.0sp"
                android:textColor = "@color/white"
                android:id = "@id/retrive_resend"
                android:background = "@drawable/btn_gray_bg"
                android:visibility = "invisible"
                android:layout_width = "fill_parent"
                android:layout_height = "42.0dip"
                android:layout_marginLeft = "5.0dip"
                android:layout_marginTop = "10.0dip"
                android:text = "@string/retrive_resend"
                android:layout_weight = "1.0" />
    </LinearLayout >
</LinearLayout >